feat: Connect Affiliate API (#6334)

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -2129,28 +2129,22 @@
   "Buy new tokens launching on Aptos": "Buy new tokens launching on Aptos",
   "Application": "Application",
   "Dashboard": "Dashboard",
-  "Manage your affiliates link, see how much you’ve earned": "Manage your affiliates link, see how much you’ve earned",
+  "Manage your affiliate link, see how much you’ve earned": "Manage your affiliate link, see how much you’ve earned",
   "Unlock the Power of PancakeSwap Affiliate Benefits": "Unlock the Power of PancakeSwap Affiliate Benefits",
-  "Market-Leading Commission": "Market-Leading Commission",
-  "Earn up to 20% commissions on every successful referral.": "Earn up to 20% commissions on every successful referral.",
-  "User-Friendly Platform": "User-Friendly Platform",
-  "Provide a seamless experience for your referrals with our user-friendly platform": "Provide a seamless experience for your referrals with our user-friendly platform",
+  "User Friendly Platform": "User Friendly Platform",
+  "Provide a seamless experience for your referrals with our user friendly platform": "Provide a seamless experience for your referrals with our user friendly platform",
   "Customize Profit-Sharing": "Customize Profit-Sharing",
-  "Share a percentage of rewards with your community": "Share a percentage of rewards with your community",
   "Real-Time Reporting": "Real-Time Reporting",
   "Easily keep tabs on commission and earnings with our user-friendly dashboard": "Easily keep tabs on commission and earnings with our user-friendly dashboard",
   "Personalized Support": "Personalized Support",
-  "Personalized assistance from our account managers": "Personalized assistance from our account managers",
   "Commission Structure": "Commission Structure",
   "Good things": "Good things",
   "are meant to be shared": "are meant to be shared",
-  "How Do You Become a PancakeSwap Affiliate?": "How Do You Become a PancakeSwap Affiliate?",
   "Still Got Questions?": "Still Got Questions?",
   "What is the criteria to become a PancakeSwap affiliate?": "What is the criteria to become a PancakeSwap affiliate?",
   "Proven track record of creating quality content related to crypto and especially DeFi": "Proven track record of creating quality content related to crypto and especially DeFi",
   "Strong understanding of PancakeSwap and our ecosystem": "Strong understanding of PancakeSwap and our ecosystem",
-  "Pairs must meet the following eligibility criteria:": "Pairs must meet the following eligibility criteria:",
-  "Pairs must be in “PancakeSwap Extended” official token list": "Pairs must be in “PancakeSwap Extended” official token list",
+  "You earn commissions from most trading fees paid by your invitees for a limited period of time": "You earn commissions from most trading fees paid by your invitees for a limited period of time",
   "Pairs must include 1 major token (BNB, BTC, BUSD, ETH, USDT and USDC)": "Pairs must include 1 major token (BNB, BTC, BUSD, ETH, USDT and USDC)",
   "How will I receive my commissions and how often will I be paid?": "How will I receive my commissions and how often will I be paid?",
   "How do I track my referrals and commissions?": "How do I track my referrals and commissions?",
@@ -2161,11 +2155,66 @@
   "You will receive your commissions on a monthly basis. This means that you will receive payments for your commissions earned in the previous month at the beginning of each month.": "You will receive your commissions on a monthly basis. This means that you will receive payments for your commissions earned in the previous month at the beginning of each month.",
   "You will be able to redeem your CAKE rewards from the affiliate dashboard page. Once redeemed, PancakeSwap will transfer the commission amount earned to your designated wallet. You will be able to see the details of each payment in your affiliate dashboard, including the amount, date, and status of each payment.": "You will be able to redeem your CAKE rewards from the affiliate dashboard page. Once redeemed, PancakeSwap will transfer the commission amount earned to your designated wallet. You will be able to see the details of each payment in your affiliate dashboard, including the amount, date, and status of each payment.",
   "Your referrals will be listed in your affiliate dashboard, along with the date they were made, their status, and the commission amount earned": "Your referrals will be listed in your affiliate dashboard, along with the date they were made, their status, and the commission amount earned",
-  "Unleash Your Earning Potential with PancakeSwap": "Unleash Your Earning Potential with PancakeSwap",
   "Join Now!": "Join Now!",
-  "Join our community of top-earning affiliates and make the most of every referral, with market-leading commission rates and endless earning opportunities.": "Join our community of top-earning affiliates and make the most of every referral, with market-leading commission rates and endless earning opportunities.",
-  "V2/V3 Swap & StableSwap": "V2/V3 Swap & StableSwap",
-  "comming soon!": "comming soon!",
+  "Swap & StableSwap": "Swap & StableSwap",
+  "Affiliate Program": "Affiliate Program",
+  "Login": "Login",
+  "Referral Link Created": "Referral Link Created",
+  "create a new link": "create a new link",
+  "Friends will receive": "Friends will receive",
+  "Generate a referral link": "Generate a referral link",
+  "Congratulations! You’re all set!": "Congratulations! You’re all set!",
+  "Start trading and enjoy referral discounts!": "Start trading and enjoy referral discounts!",
+  "Start Trading": "Start Trading",
+  "Try out our Perpetuals Platform": "Try out our Perpetuals Platform",
+  "Enjoy Low Fees": "Enjoy Low Fees",
+  "We offer the lowest fees in the industry, giving you more value for your trades": "We offer the lowest fees in the industry, giving you more value for your trades",
+  "Simplified Decentralized Trading": "Simplified Decentralized Trading",
+  "Experience true decentralization with our exchange, offering you complete control over your trades in a secure and easy-to-use environment": "Experience true decentralization with our exchange, offering you complete control over your trades in a secure and easy-to-use environment",
+  "Earn while you Trade": "Earn while you Trade",
+  "Earn CAKE tokens on most trades made on PancakeSwap. Stake for more rewards or use them in our Lottery and Pottery": "Earn CAKE tokens on most trades made on PancakeSwap. Stake for more rewards or use them in our Lottery and Pottery",
+  "Welcome to PancakeSwap!": "Welcome to PancakeSwap!",
+  "has referred you to start trading on PancakeSwap": "has referred you to start trading on PancakeSwap",
+  "Start trading today and get a": "Start trading today and get a",
+  "discount on most Swap and StableSwap trading fees, as well as a": "discount on most Swap and StableSwap trading fees, as well as a",
+  "discount on most Perpetual trading fees for a limited period of time*": "discount on most Perpetual trading fees for a limited period of time*",
+  "Start Now": "Start Now",
+  "Affiliate with us, Empower DeFi": "Affiliate with us, Empower DeFi",
+  "Join a community-driven movement to make DeFi accessible and better for everyone": "Join a community-driven movement to make DeFi accessible and better for everyone",
+  "Join our Affiliate Program": "Join our Affiliate Program",
+  "Discover your Potential": "Discover your Potential",
+  "Partner with the Leading Brand in the Industry": "Partner with the Leading Brand in the Industry",
+  "Forge a partnership with the most reputable global brand in the industry to make DeFi accessible and better for everyone": "Forge a partnership with the most reputable global brand in the industry to make DeFi accessible and better for everyone",
+  "Share the rewards with your community": "Share the rewards with your community",
+  "Personalized assistance from our community managers": "Personalized assistance from our community managers",
+  "Rewards calculator": "Rewards calculator",
+  "number of referrals": "number of referrals",
+  "Volume per user per month": "Volume per user per month",
+  "affiliate commissions per month": "affiliate commissions per month",
+  "Invite and earn commission for every successful referral": "Invite and earn commission for every successful referral",
+  "How do you Become a PancakeSwap Affiliate?": "How do you Become a PancakeSwap Affiliate?",
+  "Submit": "Submit",
+  "It's fast, easy, and completely free": "It's fast, easy, and completely free",
+  "Share": "Share",
+  "Love": "Love",
+  "Earning": "Earning",
+  "Earn up to 20% referral commissions in CAKE": "Earn up to 20% referral commissions in CAKE",
+  "Together we can make the PancakeSwap community even stronger": "Together we can make the PancakeSwap community even stronger",
+  "Share your unique affiliate link with your friends, followers, and anyone who loves a good adventure": "Share your unique affiliate link with your friends, followers, and anyone who loves a good adventure",
+  "Join PancakeSwap's Community and Make a Difference": "Join PancakeSwap's Community and Make a Difference",
+  "As an affiliate, you'll be part of a network of like-minded individuals who are committed to build a stronger DeFi community. Be part of something bigger with PancakeSwap's Affiliate program": "As an affiliate, you'll be part of a network of like-minded individuals who are committed to build a stronger DeFi community. Be part of something bigger with PancakeSwap's Affiliate program",
+  "claim your rewards": "claim your rewards",
+  "rewards breakdown": "rewards breakdown",
+  "affiliate links": "affiliate links",
+  "link": "link",
+  "profit sharing %": "profit sharing %",
+  "How do I earn commissions as an affiliate?": "How do I earn commissions as an affiliate?",
+  "coming soon!": "coming soon!",
+  "*I have read the": "*I have read the",
+  "terms and conditions": "terms and conditions",
+  "Trading pairs must meet the following eligibility criteria:": "Trading pairs must meet the following eligibility criteria:",
+  "Pairs must be in “PancakeSwap Extended” Official": "Pairs must be in “PancakeSwap Extended” Official",
+  "token list": "token list",
   "MMs are temporarily unable to facilitate trades. Please try again later": "MMs are temporarily unable to facilitate trades. Please try again later",
   "is reporting a risk level of": "is reporting a risk level of",
   "However, this token has been labelled Unknown Risk due to not being listed on any of the built-in token lists.": "However, this token has been labelled Unknown Risk due to not being listed on any of the built-in token lists.",
