feat: Trading Reward (UI only) (#6401)
router have been block

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -2216,6 +2216,61 @@
   "Pairs must be in “PancakeSwap Extended” Official": "Pairs must be in “PancakeSwap Extended” Official",
   "token list": "token list",
   "MMs are temporarily unable to facilitate trades. Please try again later": "MMs are temporarily unable to facilitate trades. Please try again later",
+  "Trade to Earn Rewards": "Trade to Earn Rewards",
+  "$40,000 worth of CAKE in Total!": "$40,000 worth of CAKE in Total!",
+  "Trading Reward": "Trading Reward",
+  "in total to be earn!": "in total to be earn!",
+  "Earn CAKE while trading your favorite tokens on PancakeSwap.": "Earn CAKE while trading your favorite tokens on PancakeSwap.",
+  "Start Trading": "Start Trading",
+  "Current Reward Pool": "Current Reward Pool",
+  "Starts": "Starts",
+  "Ends": "Ends",
+  "Total volume generated": "Total volume generated",
+  "Total reward to distribute": "Total reward to distribute",
+  "Number of eligible pairs": "Number of eligible pairs",
+  "View Pairs": "View Pairs",
+  "How to Earn": "How to Earn",
+  "+Follow For New Pairs and Reward Pool Updates": "+Follow For New Pairs and Reward Pool Updates",
+  "Look for eligible pairs": "Look for eligible pairs",
+  "Use the hot token list on the Swap page to check which pairs are eligible for trading rewards.": "Use the hot token list on the Swap page to check which pairs are eligible for trading rewards.",
+  "Start trading any eligible pairs to earn rewards in CAKE. The more you trade, the more rewards you will earn from the current reward pool.": "Start trading any eligible pairs to earn rewards in CAKE. The more you trade, the more rewards you will earn from the current reward pool.",
+  "Track your volume and rewards": "Track your volume and rewards",
+  "Come back to this page to check your volume and rewards in real-time.": "Come back to this page to check your volume and rewards in real-time.",
+  "Claim your rewards": "Claim your rewards",
+  "After each period ends, come back to this page and claim your rewards from the previous periods.": "After each period ends, come back to this page and claim your rewards from the previous periods.",
+  "Rewards Breakdown": "Rewards Breakdown",
+  "Trading Pair": "Trading Pair",
+  "Your Volume": "Your Volume",
+  "Reward Earned": "Reward Earned",
+  "Total Volume": "Total Volume",
+  "Total reward": "Total reward",
+  "Your Vol. /Reward Earned": "Your Vol. /Reward Earned",
+  "Total Vol./Total reward": "Total Vol./Total reward",
+  "Claim your rewards before expiring.": "Claim your rewards before expiring.",
+  "Your Current trading rewards": "Your Current trading rewards",
+  "Available for claiming": "Available for claiming",
+  "Your Current Trading VOLUME": "Your Current Trading VOLUME",
+  "Your unclaimed trading rewards": "Your unclaimed trading rewards",
+  "Your TOTAL trading Reward": "Your TOTAL trading Reward",
+  "Your TOTAL VOLUME Traded": "Your TOTAL VOLUME Traded",
+  "You have no CAKE locked.": "You have no CAKE locked.",
+  "Lock a minimum of 500 CAKE for 24 weeks or more to start earning from trades!": "Lock a minimum of 500 CAKE for 24 weeks or more to start earning from trades!",
+  "Not enough CAKE locked.": "Not enough CAKE locked.",
+  "Add a minimum of 200 CAKE for 24 weeks or more to start earning from trades!": "Add a minimum of 200 CAKE for 24 weeks or more to start earning from trades!",
+  "Not enough lock time.": "Not enough lock time.",
+  "Extend your locked staking for 5 weeks or more to start earning from trades!": "Extend your locked staking for 5 weeks or more to start earning from trades!",
+  "Duration": "Duration",
+  "View Pool": "View Pool",
+  "Connect wallet to view your trading volume and rewards": "Connect wallet to view your trading volume and rewards",
+  "You have no CAKE profile.": "You have no CAKE profile.",
+  "Create a Pancake Profile to start earning from trades": "Create a Pancake Profile to start earning from trades",
+  "You have earn some trading rewards": "You have earn some trading rewards",
+  "Lock CAKE to Claim": "Lock CAKE to Claim",
+  "Lock a minimum of 500 CAKE for 8 weeks or more to claim rewards from trades!": "Lock a minimum of 500 CAKE for 8 weeks or more to claim rewards from trades!",
+  "Start trading eligible pairs to earn trading rewards!": "Start trading eligible pairs to earn trading rewards!",
+  "View Eligible Pairs": "View Eligible Pairs",
+  "Your Trading Reward": "Your Trading Reward",
+  "Start trading": "Start trading",
   "is reporting a risk level of": "is reporting a risk level of",
   "However, this token has been labelled Unknown Risk due to not being listed on any of the built-in token lists.": "However, this token has been labelled Unknown Risk due to not being listed on any of the built-in token lists.",
   "Please proceed with caution and always do your own research.": "Please proceed with caution and always do your own research.",
