feat: Add nickname and ablePerps (#6420)

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -2176,8 +2176,11 @@
   "Welcome to PancakeSwap!": "Welcome to PancakeSwap!",
   "has referred you to start trading on PancakeSwap": "has referred you to start trading on PancakeSwap",
   "Start trading today and get a": "Start trading today and get a",
-  "discount on most Swap and StableSwap trading fees, as well as a": "discount on most Swap and StableSwap trading fees, as well as a",
-  "discount on most Perpetual trading fees for a limited period of time*": "discount on most Perpetual trading fees for a limited period of time*",
+  "Commissions for Perpetual product are not applicable for affiliates from prohibited jurisdictions": "Commissions for Perpetual product are not applicable for affiliates from prohibited jurisdictions",
+  "discount on most Swap and StableSwap trading fees": "discount on most Swap and StableSwap trading fees",
+  "as well as a": "as well as a",
+  "discount on most Perpetual trading fees": "discount on most Perpetual trading fees",
+  "for a limited period of time*": "for a limited period of time*",
   "Start Now": "Start Now",
   "Affiliate with us, Empower DeFi": "Affiliate with us, Empower DeFi",
   "Join a community-driven movement to make DeFi accessible and better for everyone": "Join a community-driven movement to make DeFi accessible and better for everyone",
